ai-in-zero-worker-hypershift/deploy/l1/02-admission-webhooks.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: agentinstalladmission
  labels:
    app: agentinstalladmission
  name: agentinstalladmission
  namespace: $REPLACE_NAMESPACE_L1
spec:
  ports:
  - name: agentinstalladmission
    port: 443
    protocol: TCP
    targetPort: 9443
  type: ClusterIP

---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: agentinstalladmission
  name: agentinstalladmission
  namespace: $REPLACE_NAMESPACE_L1
subsets:
- addresses:
  - ip: $REPLACE_WEBHOOK_CLUSTER_IP
  ports:
  - name: agentinstalladmission
    port: 443
    protocol: TCP

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: agentclusterinstallvalidators.admission.agentinstall.openshift.io
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.agentinstall.openshift.io/v1/agentclusterinstallvalidators
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: agentclusterinstallvalidators.admission.agentinstall.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - extensions.hive.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    - CREATE
    resources:
    - agentclusterinstalls
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: agentvalidators.admission.agentinstall.openshift.io
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.agentinstall.openshift.io/v1/agentvalidators
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: agentvalidators.admission.agentinstall.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - agent-install.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    resources:
    - agents
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: infraenvvalidators.admission.agentinstall.openshift.io
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.agentinstall.openshift.io/v1/infraenvvalidators
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: infraenvvalidators.admission.agentinstall.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - agent-install.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    resources:
    - infraenvs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: agentclusterinstallmutators.admission.agentinstall.openshift.io
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.agentinstall.openshift.io/v1/agentclusterinstallmutators
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: agentclusterinstallmutators.admission.agentinstall.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - extensions.hive.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    - CREATE
    resources:
    - agentclusterinstalls
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
